fix (sticky tabs): adjusted z-index so they won't overlap with the new rangecontrol

--- a/src/components/panel-tabs/editor.scss
+++ b/src/components/panel-tabs/editor.scss
@@ -1,7 +1,7 @@
 .ugb-panel-tabs {
 	position: sticky;
 	top: -1px;
-	z-index: 3;
+	z-index: 5;
 	.ugb-panel-tabs__wrapper {
 		display: flex !important;
 		flex-wrap: nowrap;
@@ -80,7 +80,7 @@
 			// Sticky.
 			position: sticky;
 			top: 81px;
-			z-index: 2;
+			z-index: 4;
 		}
 	}
 	.components-panel__body {
